--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,9 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+.navbar__title {
+  color: #007DBA;
+  font-family: Lato,Arial,sans-serif;
+  font-size: 2em;
+}
