--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,3 +29,17 @@
   font-family: Lato,Arial,sans-serif;
   font-size: 2em;
 }
+
+.pull-right {
+  float: right;
+}
+
+html {
+  --ifm-color--text--desc: #4A4A4A;
+  --feature-svg--filter: none;
+}
+
+html[data-theme='dark'] {
+  --ifm-color--text--desc: #FFFFFF;
+  --feature-svg--filter: invert(100%) sepia(100%) saturate(100%) hue-rotate(346deg) brightness(104%) contrast(97%);
+}
