--- a/src/pages/components/WhySysl/styles.module.css
+++ b/src/pages/components/WhySysl/styles.module.css
@@ -17,12 +17,14 @@
 .why__sysl__badge__group {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   padding: 4rem;
 }
+
 .why__sysl__badge{
-  width: 370px;
-  padding: 0 3rem;
+  max-width: 33%;
+  min-width: 370px;
+  padding: 0 4rem;
 }
 
 .why__sysl__badge:nth-child(2){
@@ -64,12 +66,15 @@
 @media screen and (max-width: 1250px) {
 
   .why__sysl__badge{
-    padding: 1rem 0;
+    padding: 1rem 1rem;
   }
 
   .why__sysl__badge:nth-child(2){
     border: none;
   }
+}
+
+@media screen and (max-width: 931px) {
 
   .why__sysl__badge > h1 {
     height: auto;
