--- a/src/pages/components/Deliver/styles.module.css
+++ b/src/pages/components/Deliver/styles.module.css
@@ -2,7 +2,10 @@
 .deliver__section {
   padding: 2rem;
 }
-.deliver__title__section{
+.deliver__title {
+  color: var(--ifm-color--text--primary);
+}
+.deliver__title__section {
   border-radius: 0 0 60% 60%;
   background: rgba(198, 223, 234, 0.3); 
   padding: 2rem;
@@ -56,6 +59,7 @@
 }
 .deliver__middle__title {
   font-size: 50px;
+  color: var(--ifm-color--text--primary);
 }
 
 .button__round {
