Highlight Sysl Pros (#54)
* highlights awareness

* Update src/pages/components/Deliver/Deliver.js

Co-authored-by: Oliver <Oliver.Lade@anz.com>

--- a/src/pages/components/Deliver/styles.module.css
+++ b/src/pages/components/Deliver/styles.module.css
@@ -9,6 +9,11 @@
   background: rgba(198, 223, 234, 0.3);
   padding: 2rem;
 }
+.deliver__desc {
+  color: var(--ifm-color--text--primary);
+  text-align: center;
+  font-size: 1.25rem;
+}
 .deliver__body {
   display: flex;
   justify-content: center;
