--- a/src/pages/components/Tryout/styles.module.css
+++ b/src/pages/components/Tryout/styles.module.css
@@ -112,6 +112,7 @@
   line-height: 40px;
   font-size: large;
   border-radius: 5px;
+  border:none;
 }
 
 .tryout__run__button, .tryout__run__button__loading {
@@ -166,6 +167,7 @@
 @media screen and (max-width: 1100px) {
   .tryout {
     text-align: center;
+    padding: 2rem;
   }
   .tryout__link {
     float: none;
